--- a/ms_sql_health_validator.yml
+++ b/ms_sql_health_validator.yml
@@ -151,7 +151,16 @@
 
     - name: Get Disk Space Information
       win_shell: |
-        Get-WmiObject Win32_LogicalDisk | Select-Object DeviceID, @{Name="Size";Expression={$_.Size}}, @{Name="FreeSpace";Expression={$_.FreeSpace}} | ConvertTo-Json -Compress
+        $disks = @()
+        Get-WmiObject Win32_LogicalDisk | ForEach-Object {
+          $disks += @{
+            "DeviceID" = $_.DeviceID;
+            "Size" = [math]::Round($_.Size/1GB, 2);
+            "FreeSpace" = [math]::Round($_.FreeSpace/1GB, 2);
+            "FreePercent" = [math]::Round(($_.FreeSpace/$_.Size)*100, 2)
+          }
+        }
+        ConvertTo-Json -InputObject $disks -Depth 3 -Compress
       register: disk_space
       ignore_errors: yes
 
@@ -168,11 +177,14 @@
       debug:
         msg: |
           💾 Disk Space:
-          {% for item in disk_space_fact if item is mapping and 'DeviceID' in item and 'FreeSpace' in item %}
-            - Volume: {{ item.DeviceID }} | Free Space: {{ (item.FreeSpace | int / 1073741824) | round(2) }} GB
+          {% set disk_data = (disk_space.stdout | default('[]') | from_json) %}
+          {% if disk_data is not string and disk_data | length > 0 %}
+            {% for disk in disk_data %}
+              - Volume: {{ disk.DeviceID }} | Size: {{ disk.Size }} GB | Free: {{ disk.FreeSpace }} GB ({{ disk.FreePercent }}%)
+            {% endfor %}
           {% else %}
             - No valid disk space data available.
-          {% endfor %}
+          {% endif %}
  
           📊 Database Space Utilization:
           {% for item in db_space_fact | default([]) if item.DatabaseName is defined and item.SizeMB is defined %}
@@ -256,19 +268,22 @@
           {% endif %}
           
           💾 **Disk Space Check:**
-          {% for item in disk_space_fact if item is mapping and 'DeviceID' in item and 'FreeSpace' in item %}
-            {% set free_pct = (item.FreeSpace|float / item.Size|float * 100)|round(2) %}
-            {% if free_pct < 10 %}
-              🚨 **ALERT: Low disk space on {{ item.DeviceID }}!**
-              - {{ free_pct }}% free ({{ (item.FreeSpace|int / 1073741824)|round(2) }} GB)
-              - Suggested Fix:
-                - Clean up log files, temp files
-                - Review database file growth
-                - Consider adding storage
-            {% endif %}
+          {% if disk_space.stdout is defined %}
+            {% set disk_data = disk_space.stdout | from_json %}
+            {% for disk in disk_data %}
+              {% set free_pct = ((disk.FreeSpace | float / disk.Size | float) * 100) | round(2) %}
+              {% if free_pct < 10 %}
+                🚨 **ALERT: Low disk space on {{ disk.DeviceID }}!**
+                - {{ free_pct }}% free ({{ (disk.FreeSpace | int / 1073741824) | round(2) }} GB)
+                - Suggested Fix:
+                  - Clean up log files, temp files
+                  - Review database file growth
+                  - Consider adding storage
+              {% endif %}
+            {% endfor %}
           {% else %}
             ✅ All drives have sufficient disk space.
-          {% endfor %}
+          {% endif %}
           
           🔒 **Deadlock Check:**
           {% if (deadlocks_fact.Deadlocks|default(0)|int) > 0 %}
@@ -276,41 +291,4 @@
             - Suggested Fix:
               - Review transaction isolation levels
               - Optimize queries with high lock duration
-              - Consider using NOLOCK hint for read-only operations
-          {% else %}
-            ✅ No deadlocks detected.
-          {% endif %}
-    
-          🧪 **Test Error Check:**
-          {% if test_error is defined and test_error.stdout is defined %}
-            {% if test_error.stdout is search('Test error generated successfully') %}
-              🔔 Test error was successfully generated for monitoring validation.
-              - This is an expected test condition to verify alert systems.
-            {% else %}
-              ❓ Test error generation status unknown.
-            {% endif %}
-          {% else %}
-            ❌ No test error data available.
-          {% endif %}
-          
-          📜 **Error Log Analysis:**
-          {% if error_logs_fact is defined and error_logs_fact|length > 0 %}
-            {% set error_found = false %}
-            {% for item in error_logs_fact %}
-              {% if item.text is defined and item.text|lower is search('severity: [1-9][0-9]') %}
-                {% set error_found = true %}
-                🚨 **ALERT: High severity error detected!**
-                - {{ item.text|truncate(150) }}
-                - Time: {{ item.logdate }}
-                - Suggested Fix:
-                  - Review SQL Server error log details
-                  - Check for related issues in Windows Event Log
-              {% endif %}
-            {% endfor %}
-            {% if not error_found %}
-              ✅ No critical errors found in logs.
-            {% endif %}
-          {% else %}
-            ✅ No errors found in SQL Server logs.
-          {% endif %}
-    
+              -
