--- a/ms_sql_health_validator.yml
+++ b/ms_sql_health_validator.yml
@@ -190,12 +190,6 @@
           {% for item in db_space_fact | default([]) if item.DatabaseName is defined and item.SizeMB is defined %}
            - {{ item.DatabaseName }}: {{ item.SizeMB }} MB
           {% endfor %}
-          🚨 Deadlocks:
-          {% if (deadlocks_fact.Deadlocks | default(0) | int) > 0 %}
-           - {{ deadlocks_fact.Deadlocks }} deadlocks detected!
-          {% else %}
-           - No deadlocks detected
-          {% endif %}
           [ℹ️] Job activities query returned {{ job_activities_fact | default([]) | length }} rows.
           🛠 SQL Server Agent Job Activities:
           {% if job_activities_fact.name is defined and job_activities_fact.enabled is defined and job_activities_fact.last_run_status is defined %}
@@ -227,7 +221,12 @@
           {% else %}
             [❌] No database health data available.
           {% endif %}
-          
+          🚨 Deadlocks:
+          {% if (deadlocks_fact.Deadlocks | default(0) | int) > 0 %}
+           - {{ deadlocks_fact.Deadlocks }} deadlocks detected!
+          {% else %}
+           - No deadlocks detected
+          {% endif %}
           📜 SQL Server Error Log:
           {% if error_logs_fact is defined and error_logs_fact | length > 0 %}
             {% for item in error_logs_fact | default([]) %}
@@ -239,7 +238,8 @@
             [ℹ️] No errors found in SQL Server logs or error log data not available.
           {% endif %}
           
-    
+
+
     - name: Display SQL Server Issues and Troubleshooting Suggestions
       debug:
         msg: |
@@ -271,19 +271,29 @@
           💾 **Disk Space Check:**
           {% if disk_space.stdout is defined %}
             {% set disk_data = disk_space.stdout | from_json %}
-            {% for disk in disk_data %}
-              {% set free_pct = ((disk.FreeSpace | float / disk.Size | float) * 100) | round(2) %}
-              {% if free_pct < 10 %}
-                🚨 **ALERT: Low disk space on {{ disk.DeviceID }}!**
-                - {{ free_pct }}% free ({{ (disk.FreeSpace | int / 1073741824) | round(2) }} GB)
-                - Suggested Fix:
-                  - Clean up log files, temp files
-                  - Review database file growth
-                  - Consider adding storage
+            {% if disk_data is iterable and (disk_data is not string) and (disk_data | length > 0) %}
+              {% set low_space_found = false %}
+              {% for disk in disk_data %}
+                {% if disk.FreePercent is defined and disk.Size is defined %}
+                  {% if disk.FreePercent < 10 %}
+                    {% set low_space_found = true %}
+                    🚨 **ALERT: Low disk space on {{ disk.DeviceID }}!**
+                    - {{ disk.FreePercent }}% free ({{ disk.FreeSpace }} GB)
+                    - Suggested Fix:
+                      - Clean up log files, temp files
+                      - Review database file growth
+                      - Consider adding storage
+                  {% endif %}
+                {% endif %}
+              {% endfor %}
+              {% if not low_space_found %}
+                ✅ All drives have sufficient disk space.
               {% endif %}
-            {% endfor %}
+            {% else %}
+              ❓ Disk space data format is invalid.
+            {% endif %}
           {% else %}
-            ✅ All drives have sufficient disk space.
+            ❓ No disk space data available.
           {% endif %}
           
           🔒 **Deadlock Check:**
@@ -295,4 +305,31 @@
               - Check application transaction handling
           {% else %}
             ✅ No deadlocks detected.
+          {% endif %}
+          🧪 **Test Error Check:**
+          {% if test_error is defined and test_error.stdout is defined %}
+            Test error was successfully generated for monitoring validation.
+            - This is an expected test condition to verify alert systems.
+          {% else %}
+            ❓ No test error data available.
+          {% endif %}
+          📜 **Error Log Analysis:**
+          {% if error_logs_fact is defined and error_logs_fact|length > 0 %}
+            {% set critical_error_found = false %}
+            {% for item in error_logs_fact %}
+              {% if item.text is defined and item.text|lower is search('severity: [1-9][0-9]') %}
+                {% set critical_error_found = true %}
+                🚨 **ALERT: High severity error detected!**
+                - {{ item.text|truncate(150) }}
+                - Time: {{ item.logdate }}
+                - Suggested Fix:
+                  - Review SQL Server error log details
+                  - Check for related issues in Windows Event Log
+              {% endif %}
+            {% endfor %}
+            {% if not critical_error_found %}
+              ✅ No errors found in SQL Server logs.
+            {% endif %}
+          {% else %}
+            ✅ No errors found in SQL Server logs.
           {% endif %}
