--- a/ms_sql_health_validator1.yml
+++ b/ms_sql_health_validator1.yml
@@ -28,6 +28,7 @@
         }
       register: host_check
       ignore_errors: yes
+
     - name: Display Host Reachability Results
       debug:
         msg: |
@@ -42,6 +43,7 @@
           {% else %}
             ❓ Unable to determine host status
           {% endif %}
+
     - name: Check if MS SQL Port is Open
       win_shell: |
         $tcpConnection = Get-NetTCPConnection -LocalPort {{ sql_port }} -State Listen -ErrorAction SilentlyContinue
@@ -75,8 +77,6 @@
               - Verify SQL Server configuration (`SQL Server Configuration Manager`)
           {% endif %}
 
-     
- 
     - name: Get Database Space Utilization
       win_shell: |
         try {
@@ -124,6 +124,7 @@
         }
       register: job_activities
       ignore_errors: yes
+
     - name: Generate SQL Server Error for Testing
       win_shell: |
         try {
@@ -140,7 +141,6 @@
       debug:
         msg: "{{ test_error.stdout }}"
 
- 
     - name: Check SQL Server Error Log for Issues
       win_shell: |
         try {
@@ -170,12 +170,12 @@
 
     - name: Convert Outputs to JSON
       set_fact:
-        db_space_fact: "{{ db_space.stdout | default('[]') | regex_replace('[\\r\\n]', '') | from_json }}"
-        db_health_fact: "{{ db_health.stdout | default('[]') | regex_replace('[\\r\\n]', '') | from_json }}"
-        deadlocks_fact: "{{ deadlocks.stdout | default('[]') | regex_replace('[\\r\\n]', '') | from_json }}"
-        job_activities_fact: "{{ job_activities.stdout | default('[]') | regex_replace('[\\r\\n]', '') | from_json }}"
-        disk_space_fact: "{{ disk_space.stdout | default('[]') | regex_replace('[\\r\\n]', '') | from_json }}"
-        error_logs_fact: "{{ error_logs.stdout | default('[]') | regex_replace('[\\r\\n]', '') | from_json }}"
+        db_space_fact: "{{ db_space.stdout | default('[]') | from_json }}"
+        db_health_fact: "{{ db_health.stdout | default('[]') | from_json }}"
+        deadlocks_fact: "{{ deadlocks.stdout | default('[]') | from_json }}"
+        job_activities_fact: "{{ job_activities.stdout | default('[]') | from_json }}"
+        disk_space_fact: "{{ disk_space.stdout | default('[]') | from_json }}"
+        error_logs_fact: "{{ error_logs.stdout | default('[]') | from_json }}"
     
     - name: Display Formatted Results
       debug:
@@ -308,6 +308,7 @@
           {% else %}
             ✅ No deadlocks detected.
           {% endif %}
+          
           🧪 **Test Error Check:**
           {% if test_error is defined and test_error.stdout is defined %}
             Test error was successfully generated for monitoring validation.
@@ -315,6 +316,7 @@
           {% else %}
             ❓ No test error data available.
           {% endif %}
+          
           📜 **Error Log Analysis:**
           {% if error_logs_fact is defined and error_logs_fact|length > 0 %}
             {% set critical_error_found = false %}
