--- a/ms_sql_health_validator.yml
+++ b/ms_sql_health_validator.yml
@@ -14,7 +14,7 @@
   tasks:
     - name: Set dynamic variables from webhook payload
       set_fact:
-        INCIDENT_NUMBER: "{{ awx_webhook_payload.INCIDENT_NUMBER }}"
+        incident_number: "{{ awx_webhook_payload.incident_number }}"
   tasks:
     - name: Check if host is reachable
       win_shell: |
@@ -328,9 +328,9 @@
             ✅ No errors found in SQL Server logs.
           {% endif %}
 
-    - name: Get Incident Sys_ID from ServiceNow
+    - name: Get Incident Sys_ID
       uri:
-        url: "https://{{ service_now_instance }}/api/now/table/incident?sysparm_query=number={{ INCIDENT_NUMBER }}"
+        url: "https://{{ service_now_instance }}/api/now/table/incident?sysparm_query=number={{ incident_number }}"
         method: GET
         force_basic_auth: yes
         headers:
@@ -344,7 +344,7 @@
         incident_sys_id: "{{ incident_info.json.result[0].sys_id }}"
       when: incident_info.json.result | length > 0
  
-    - name: Update SNOW Ticket - Issue Resolved
+    - name: Update SNOW ticket - Issue Resolved
       uri:
         url: "https://{{ service_now_instance }}/api/now/table/incident/{{ incident_sys_id }}"
         method: PATCH
@@ -357,28 +357,8 @@
           {
             "state": "7",
             "close_code": "Solution Provided",
-            "close_notes": "Disk space optimized by stopping a high-consuming process."
+            "close_notes": "Memory issue resolved by killing the top memory-consuming process. Ticket closed by automation."
           }
         status_code: [200, 201, 403, 405]
       when: issue_resolved | default(false) | bool and incident_sys_id is defined
-      register: sn_response
-      delegate_to: localhost
- 
-    - name: Update SNOW Ticket - Manual Escalation
-      uri:
-        url: "https://{{ service_now_instance }}/api/now/table/incident/{{ incident_sys_id }}"
-        method: PATCH
-        force_basic_auth: yes
-        headers:
-          Authorization: "Basic {{ (service_now_username + ':' + service_now_password) | b64encode }}"
-          Content-Type: "application/json"
-        body_format: json
-        body:
-          {
-            "state": "4",
-            "work_notes": "Automation failed. Assigned to manual queue."
-          }
-        status_code: [200, 405]
-      when: issue_resolved is not defined or not issue_resolved | bool and incident_sys_id is defined
-      register: sn_escalation_response
       delegate_to: localhost
