--- a/ms_sql_health_validator.yml
+++ b/ms_sql_health_validator.yml
@@ -9,8 +9,8 @@
     service_now_instance: "{{ service_now_instance }}"
     service_now_username: "{{ service_now_username }}"
     service_now_password: "{{ service_now_password }}"
-    sql_port: 1433 
-
+    
+    sql_port: 1433
   tasks:
     - name: Set dynamic variables from webhook payload
       set_fact:
@@ -19,7 +19,7 @@
     - name: Check if host is reachable
       win_shell: |
         try {
-          $targetHost = "{{ hosts }}"
+          $targetHost = "{{ inventory_hostname }}"
           $pingResult = Test-Connection -ComputerName $targetHost -Count 1 -Quiet
           if ($pingResult) {
             Write-Output '[{"Status": "Success", "Message": "Host is up and reachable"}]'
